--- a/.render.yaml
+++ b/.render.yaml
@@ -3,4 +3,5 @@ services:
     name: ai-data-cleaner
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+   startCommand: gunicorn app:app --bind 0.0.0.0:8080
+
